--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-email-autocomplete": "^1.3.4",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.7",
