--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -2,10 +2,13 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
@@ -13,7 +16,6 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -21,5 +23,15 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "../components/minorAge", "../components/loadings", "../components/howToGet", "../components/Home", "../components/background", "../components/played", "../components/slot", "../components/terms"]
+  "include": [
+    "src",
+    "../components/minorAge",
+    "../components/loadings",
+    "../components/howToGet",
+    "../components/Home",
+    "../components/background",
+    "../components/played",
+    "../components/slot",
+    "../components/terms"
+  ]
 }
